Update index.html  galery

--- a/www.rocroofingfl.com/index.html
+++ b/www.rocroofingfl.com/index.html
@@ -175,11 +175,11 @@
     <section id="before-after-gallery">
       <h2>Before and After Gallery</h2>
       <div class="gallery-carousel">
-        <div class="gallery-item" data-href="path-to-before-image.jpg">
+        <div class="gallery-item" data-<a href="https://ibb.co/jGX7pC9"><img src="https://i.ibb.co/P4HBS2s/bg1.jpg" alt="bg1" border="0"></a>">
           <img src="path-to-thumbnail-before-image.jpg" alt="Before Image">
         </div>
-        <div class="gallery-item" data-href="path-to-after-image.jpg">
-          <img src="path-to-thumbnail-after-image.jpg" alt="After Image">
+        <div class="gallery-item" data-<a href="https://ibb.co/58hjSMW"><img src="https://i.ibb.co/G2QM8xv/Commercial4.jpg" alt="Commercial4" border="0"></a><br /><a target='_blank' href='https://usefulwebtool.com/convert-lower-upper-case'>convert caps to lowercase</a><br />">
+          <img src="<a href="https://ibb.co/58hjSMW"><img src="https://i.ibb.co/G2QM8xv/Commercial4.jpg" alt="Commercial4" border="0"></a><br /><a target='_blank' href='https://usefulwebtool.com/convert-lower-upper-case'>convert caps to lowercase</a><br />">
         </div>
         <!-- Add more gallery items as needed -->
       </div>
