--- a/www.rocroofingfl.com/index.html
+++ b/www.rocroofingfl.com/index.html
@@ -51,7 +51,7 @@
   <style>
     /* New CSS for Top Bar Section */
     #top-bar {
-      background-color: #333;
+      background-color: #FF0000;
       padding: 10px 0;
       color: #fff;
       transition: background-color 0.3s;
