--- a/www.rocroofingfl.com/index.html
+++ b/www.rocroofingfl.com/index.html
@@ -64,7 +64,7 @@
     }
 
     #top-bar a:hover {
-      color: #ffd700; /* Change to your desired hover color */
+      color: #FF0000; /* Change to your desired hover color */
     }
 
     /* Container Styles */
@@ -88,7 +88,7 @@
 
     /* Footer Styles */
     .footer {
-      background-color: #333;
+      background-color: #FF0000;
       color: #fff;
       padding: 20px;
       text-align: center;
@@ -108,7 +108,7 @@
 
     /* Bounce Animation */
     .bounce {
-      animation: bounce 0.5s ease infinite;
+      animation: bounce 0.10s ease infinite;
     }
 
     @keyframes bounce {
@@ -152,7 +152,7 @@
   <!-- Logo/Carousel Section -->
   <div class="logo col-lg-3 text-center text-lg-left mb-3 mb-md-5 mb-lg-0 container">
     <div class="carousel">
-      <div><img loading="lazy" src="images/logo1.png" alt="Constra"></div>
+      <div><img loading="lazy" <a href="https://imgbb.com/"><img src="https://i.ibb.co/3W2nYCP/logo.jpg" alt="logo" border="0"></a>
       <div><img loading="lazy" src="images/logo2.png" alt="Constra"></div>
       <!-- Add more images as needed -->
     </div>
